# c-ds-and-algo

./: .gitignore  CMakeLists.txt
src/arithmetic/: arithmetic  arithmetic.c
src/circular_buffer/: CMakeLists.txt  circular_buffer.c  circular_buffer.h  main.c
src/circular_buffer/include/: circular_buffer.h
src/control_flow/: control_flow.c
src/dynamic_memory/: caesar.c  logfile
src/hash_table/: CMakeLists.txt  hash_table.c
src/hello_world/: hello_world.c
src/objects_and_functions/: function_array.c  static_counter.c  swap.c
src/pointers/: pointers  pointers.c
src/program_structure/check_primes/: check_primes.c
src/program_structure/primetest/: isprime.c
src/program_structure/primetest/include/: isprime.h
test/circular_buffer/: CMakeLists.txt  test_circular_buffer.c
